tests/ui/borrowck/borrowck-move-out-of-overloaded-deref.stderr
error[E0507]: cannot move out of an `Rc`
  --> $DIR/borrowck-move-out-of-overloaded-deref.rs:4:14
   |
LL |     let _x = *Rc::new("hi".to_string());
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ move occurs because value has type `String`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let _x = *Rc::new("hi".to_string());
LL +     let _x = Rc::new("hi".to_string());
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL -     let _x = *Rc::new("hi".to_string());
LL +     let _x = Rc::new("hi".to_string()).clone();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
